--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Cypress Tests
 
 on:
   push:
-    branches: [master]
+    branches: [master, feature/ci]
 
   pull_request:
     branches: [master]
